# cui

./: .gitignore  CMakeLists.txt  execute.py  run.py
includes/: main.h  main_frame.h
main/includes/: main_frame.h  prime_panel.h
main/srcs/: main_frame.cpp  prime_panel.cpp
srcs/: main.cpp  main_frame.cpp
